--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -14,7 +14,7 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/BallerzMeet"
+        android:src="@drawable/logo"
         android:layout_margin="20dp"/>
 
     <TextView
