--- a/app/src/main/res/layout/activity_find_game_search.xml
+++ b/app/src/main/res/layout/activity_find_game_search.xml
@@ -1,40 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     android:gravity="center"
-    tools:context="com.ballersmeet.sruti.ballersmeet.control.HomeScreenActivity"
-    android:weightSum="1">
+    android:orientation="vertical"
+    tools:context="com.ballersmeet.sruti.ballersmeet.control.FindGameSearchActivity">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
+        <EditText
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:inputType="date"
+            android:textSize="20sp"
+            android:id="@+id/dateET"
+            android:hint="date"/>
+        <DatePicker
+            android:layout_width="50dp"
+            android:layout_height="50dp"></DatePicker>
+    </LinearLayout>
 
-    <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:src="@drawable/ballerz_meet"
-        android:layout_margin="10dp"/>
-
-    <TextView
+    <EditText
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Ballerz Meet"
-        android:gravity="center"
-        android:textSize="25sp"
-        android:layout_marginBottom="10dp"
-        android:textStyle="bold"/>
+        android:inputType="time"
+        android:hint="time"/>
 
-    <GridView
-        android:id="@+id/sc_spots"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:fillViewport="true"
-        android:numColumns="3"
-        android:scrollbars="vertical"
-        android:smoothScrollbar="true"
-        android:clickable="false">
-
-    </GridView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,7 +41,8 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Profile"
-            android:id="@+id/profileBT" />
+            android:id="@+id/profileBT"
+            android:onClick="handleProfileClick"/>
         <Button
             android:layout_width="120dp"
             android:layout_height="wrap_content"
