--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,12 +29,12 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:id="@+id/loginBT"
-        android:onClick="handleLoginClick"/>
+        android:onClick="handleLoginClicked"/>
     <TextView
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="Cancel"
-        android:onClick="handleCancelClick"
+        android:onClick="handleCancelClicked"
         android:gravity="center"
         android:id="@+id/cancelTV"
         android:layout_margin="10dp"/>
