--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -53,6 +53,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Find Game"
+            android:onClick="handleFindClicked"
             android:id="@+id/findGameBT" />
         <Button
             android:layout_width="120dp"
