updated find game

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -43,6 +43,7 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
         android:background="#999999">
         <Button
             android:layout_width="120dp"
