--- a/app/src/main/res/layout/activity_find_game.xml
+++ b/app/src/main/res/layout/activity_find_game.xml
@@ -1,63 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_find_game"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.ballersmeet.sruti.ballersmeet.control.FindGame">
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent"
+        android:id="@+id/scrollView2">
         <LinearLayout
-            android:gravity="bottom"
-            android:columnCount="4"
-            android:rowCount="4"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_width="fill_parent" >
+            android:orientation="vertical">
             <DatePicker
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/timePicker"
-                android:layout_gravity="clip_horizontal"
-                android:layout_marginBottom="53dp"
-                android:layout_columnSpan="4"
-                android:layout_row="1"
-                android:id="@+id/datePicker" />
+                android:layout_centerHorizontal="true"
+                android:id="@+id/datePicker"
+                android:layout_margin="20dp" />
 
             <TimePicker
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/navbar"
-                android:layout_columnSpan="4"
-                android:layout_row="2"
-                android:layout_marginLeft="14dp"
-                android:layout_marginStart="14dp"
-                android:layout_marginBottom="38dp"
-                android:id="@+id/timePicker" />
+                android:layout_alignLeft="@+id/datePicker"
+                android:layout_alignStart="@+id/datePicker"
+                android:id="@+id/timePicker"
+                android:layout_margin="20dp" />
         </LinearLayout>
     </ScrollView>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_gravity="bottom"
-            android:layout_row = "3"
-            android:layout_columnSpan="4"
-            android:background="#999999">
-            <Button
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:text="Profile"
-                android:id="@+id/profileBT" />
-            <Button
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:text="Find Game"
-                android:id="@+id/findGameBT" />
-            <Button
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:text="Start Game"
-                android:id="@+id/startGameBT" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:background="#999999">
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Profile"
+            android:id="@+id/profileBT" />
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Find Game"
+            android:onClick="handleFindClicked"
+            android:id="@+id/findGameBT" />
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Start Game"
+            android:id="@+id/startGameBT" />
 
-        </LinearLayout>
-</RelativeView>
+    </LinearLayout>
+</RelativeLayout>
