--- a/app/src/main/res/layout/activity_find_game.xml
+++ b/app/src/main/res/layout/activity_find_game.xml
@@ -2,35 +2,124 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_find_game"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.ballersmeet.sruti.ballersmeet.control.FindGame">
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/scrollView2">
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical">
-            <DatePicker
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/timePicker"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/datePicker"
-                android:layout_margin="20dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop = "true"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:src="@drawable/ballerz_meet"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"/>
 
-            <TimePicker
-                android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:text="Ballerz Meet"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/ballerz"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id = "@+id/selection"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="140dp">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView2" >
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/datePicker"
-                android:layout_alignStart="@+id/datePicker"
-                android:id="@+id/timePicker"
-                android:layout_margin="20dp" />
-        </LinearLayout>
-    </ScrollView>
+                android:orientation="vertical"
+                android:gravity="center"
+                android:paddingBottom="20dp"
+                android:paddingRight="20dp"
+                android:paddingLeft="20dp">
+                <TextView
+                    android:paddingLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Search for a game in your area!"
+                    android:layout_marginBottom="20dp"/>
+                <TextView
+                    android:paddingLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose a date"
+                    android:layout_marginBottom="20dp"/>
+                <CalendarView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/calendarView" />
+                <TextView
+                    android:paddingLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose a time"
+                    android:layout_marginBottom="20dp"/>
+                <TimePicker
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:id="@+id/timePicker"
+                    android:layout_weight="1" />
+                <TextView
+                    android:paddingLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose the distance you will travel"
+                    android:layout_marginTop="50dp"/>
+                <SeekBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max ="9"
+                    android:progress = "2"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:progressDrawable="@color/colorPrimaryDark"/>
+                <RelativeLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal" >
+                <TextView
+                    android:id="@+id/tvLabel1"
+                    android:paddingLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1" />
+                <TextView
+                    android:id="@+id/tvLabel3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:paddingRight="10dp"
+                    android:text="10" />
+                </RelativeLayout>
+                <Button
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:text="Find Game"
+                    android:id="@+id/search" />
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -39,22 +128,22 @@
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
         android:background="#999999">
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Profile"
-            android:id="@+id/profileBT" />
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Find Game"
-            android:onClick="handleFindClicked"
-            android:id="@+id/findGameBT" />
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Start Game"
-            android:id="@+id/startGameBT" />
-
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Profile"
+        android:id="@+id/profileBT" />
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Find Game"
+        android:onClick="handleFindClicked"
+        android:id="@+id/findGameBT" />
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Start Game"
+        android:id="@+id/startGameBT" />
     </LinearLayout>
+
 </RelativeLayout>
