--- a/app/src/main/res/layout/activity_find_game.xml
+++ b/app/src/main/res/layout/activity_find_game.xml
@@ -132,6 +132,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Profile"
+        android:onClick="handleProfileClicked"
         android:id="@+id/profileBT" />
     <Button
         android:layout_width="120dp"
@@ -143,6 +144,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Start Game"
+        android:onClick="handleStartClicked"
         android:id="@+id/startGameBT" />
     </LinearLayout>
 
