added game object to view game activity

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -60,7 +60,7 @@
         <Button
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Start Game"
+            android:text="Create Game"
             android:id="@+id/startGameBT"
             android:onClick="handleStartClicked"/>
 
