--- a/app/src/main/res/layout/activity_find_game.xml
+++ b/app/src/main/res/layout/activity_find_game.xml
@@ -142,7 +142,7 @@
     <Button
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="Start Game"
+        android:text="Create Game"
         android:id="@+id/startGameBT" />
     </LinearLayout>
 
