--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,60 +7,82 @@
     android:gravity="center"
     tools:context="com.ballersmeet.sruti.ballersmeet.control.ProfileActivity">
 
-    <ImageView
-
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:src="@drawable/ballerz_meet"
-        android:layout_margin="10dp"/>
-
-    <TextView
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="Ballerz Meet"
-        android:gravity="center"
-        android:textSize="25sp"
-        android:layout_marginBottom="10dp"
-        android:textStyle="bold"/>
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_alignParentTop = "true"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:src="@drawable/ballerz_meet"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"/>
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:text="User: "
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:gravity="center|right"/>
-        <EditText
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/userTV"/>
+            android:text="Ballerz Meet"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/ballerz"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold"/>
     </LinearLayout>
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="230dp">
+        android:id = "@+id/selection"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="140dp"
+        android:padding="20dp"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
-        <TextView
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="Skill Level: "
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:gravity="center|right"/>
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="User: "
+                android:gravity="center|right"
+                android:textSize="20sp" />
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Sruti7"
+                android:id="@+id/userTV"
+                android:textSize="20sp" />
+        </LinearLayout>
 
-        <EditText
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/skillTV"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Skill Level: "
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:gravity="center|right"/>
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="7 probably"
+                android:textSize="20sp"
+                android:id="@+id/skillTV"/>
+
+        </LinearLayout>
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -89,4 +111,4 @@
             android:onClick="handleStartClicked"/>
 
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
