created new join game activity and made users unable to join games from home screen

--- a/app/src/main/res/layout/activity_join_game.xml
+++ b/app/src/main/res/layout/activity_join_game.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ballersmeet.sruti.ballersmeet.control.StartGameActivity"
+    tools:context="com.ballersmeet.sruti.ballersmeet.control.JoinGameActivity"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -135,8 +135,14 @@
             <Button
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="OK"
-                android:id="@id/cancelBT"
+                android:text="Join"
+                android:id="@+id/joinBT"
+                android:onClick="handleJoinClicked"/>
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:id="@+id/cancelBT"
                 android:onClick="handleCancelClick"/>
         </LinearLayout>
     </LinearLayout>
@@ -171,3 +177,4 @@
             android:onClick="handleStartClicked"/>
     </LinearLayout>
 </RelativeLayout>
+
