--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -54,7 +54,7 @@
                 android:gravity="center|right"
                 android:textSize="20sp" />
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="Sruti7"
                 android:id="@+id/userTV"
@@ -75,7 +75,7 @@
                 android:textStyle="bold"
                 android:gravity="center|right"/>
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="7 probably"
                 android:textSize="20sp"
@@ -106,7 +106,7 @@
         <Button
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Start Game"
+            android:text="Create Game"
             android:id="@+id/startGameBT"
             android:onClick="handleStartClicked"/>
 
