--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp"
-    android:onClick="handleNumClicked">
+    android:layout_marginBottom="20dp">
 
     <TextView
         android:layout_width="10dp"
@@ -18,7 +17,7 @@
         android:layout_marginRight="5dp"
         android:textColor="@color/wallet_holo_blue_light" />
     <TextView
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/gameLocTV" />
 
