--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -86,41 +86,21 @@
                     android:paddingLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Choose the distance you will travel"
+                    android:text="Choose the number of players"
                     android:layout_marginTop="50dp"/>
-                <SeekBar
+
+                <NumberPicker
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:max ="9"
-                    android:progress = "2"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:progressDrawable="@color/colorPrimaryDark"/>
-                <RelativeLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal" >
-                    <TextView
-                        android:id="@+id/tvLabel1"
-                        android:paddingLeft="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1" />
-                    <TextView
-                        android:id="@+id/tvLabel3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:paddingRight="10dp"
-                        android:text="10" />
-                </RelativeLayout>
+                    android:id="@+id/numberPicker" />
+
                 <Button
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="25dp"
-                    android:text="Find Game"
+                    android:onClick="handleStartGameClick"
+                    android:text="Create This Game"
                     android:id="@+id/search" />
             </LinearLayout>
         </ScrollView>
@@ -148,7 +128,7 @@
         <Button
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Start Game"
+            android:text="Create Game"
             android:onClick="handleStartClicked"
             android:id="@+id/startGameBT" />
     </LinearLayout>
