added join game activity

--- a/app/src/main/res/layout/activity_find_game.xml
+++ b/app/src/main/res/layout/activity_find_game.xml
@@ -116,7 +116,8 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="25dp"
                     android:text="Find Game"
-                    android:id="@+id/search" />
+                    android:id="@+id/search"
+                    android:onClick="handleSearch"/>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
