--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop = "true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
         <ImageView
             android:layout_width="75dp"
             android:layout_height="75dp"
@@ -21,7 +22,8 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            android:onClick="handleImageClicked"/>
 
         <TextView
             android:layout_width="250dp"
@@ -35,6 +37,7 @@
             android:layout_marginBottom="10dp"
             android:textStyle="bold"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
