--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,7 +19,8 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            android:onClick="handleImageClicked"/>
 
         <TextView
             android:layout_width="250dp"
@@ -54,7 +55,7 @@
                 android:gravity="center|right"
                 android:textSize="20sp" />
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:text="Sruti7"
                 android:id="@+id/userTV"
@@ -75,7 +76,7 @@
                 android:textStyle="bold"
                 android:gravity="center|right"/>
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:text="7 probably"
                 android:textSize="20sp"
