--- a/app/src/main/res/layout/activity_search_games.xml
+++ b/app/src/main/res/layout/activity_search_games.xml
@@ -16,7 +16,8 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="center"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            android:onClick="handleImageClicked"/>
 
         <TextView
             android:layout_width="250dp"
