--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -52,6 +52,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="User: "
+                android:textStyle="bold"
                 android:gravity="center|right"
                 android:textSize="20sp" />
             <TextView
