--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_find_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ballersmeet.sruti.ballersmeet.control.FindGame">
+    tools:context=".control.FindGameFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,10 +31,10 @@
                     android:text="When, where, how many playas?"
                     android:layout_marginBottom="20dp"/>
                 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:name="com.google.android.gms.maps.MapFragment"
                     android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.MapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"/>
+                    android:layout_height="300dp" />
                 <TextView
                     android:paddingLeft="10dp"
                     android:layout_width="wrap_content"
