--- a/app/src/main/res/layout/activity_find_game.xml
+++ b/app/src/main/res/layout/activity_find_game.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_find_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ballersmeet.sruti.ballersmeet.control.FindGame">
+    tools:context=".control.FindGameFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
