--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="com.ballersmeet.sruti.ballersmeet.control.ProfileActivity">
+    tools:context=".control.ProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
