--- a/app/src/main/res/layout/activity_join_game.xml
+++ b/app/src/main/res/layout/activity_join_game.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.ballersmeet.sruti.ballersmeet.control.JoinGameActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id = "@+id/selection"
-        android:layout_marginBottom="60dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:padding="20dp"
         android:orientation="vertical">
 
