--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -13,10 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id = "@+id/selection"
-        android:layout_marginBottom="60dp"
-        android:layout_marginTop="140dp"
-        android:padding="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your Upcoming Games"
+            android:layout_gravity="center"
+            android:textSize="30sp"
+            android:layout_marginBottom="10dp"/>
         <ListView
             android:id="@+id/list"
             android:layout_width="wrap_content"
