--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:textSize="20sp"
 
-            android:textColor="@color/wallet_holo_blue_light" />
+            android:textColor="#6099FF" />
         <TextView
             android:layout_width="170dp"
             android:layout_height="wrap_content"
