made view game and join game into fragments?

--- a/app/src/main/res/layout/fragment_join_game.xml
+++ b/app/src/main/res/layout/fragment_join_game.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ballersmeet.sruti.ballersmeet.control.JoinGameActivity"
+    tools:context=".control.JoinGameFragment"
     android:orientation="vertical"
     android:gravity="center">
     <LinearLayout
